--- a/ovinos/templates/ovinos/login.html
+++ b/ovinos/templates/ovinos/login.html
@@ -29,6 +29,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Entrar</button>
                 </form>
+                <p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
 
                 <a href="{% url 'lista_ovinos' %}" class="btn btn-secondary w-100 mt-2">Página Inicial</a>
             </div>
