cadastro de lotes para leilão e lance 70% concluido, fazendo cadastrado mas ainda sem ofertar lances

--- a/ovinos/templates/ovinos/home.html
+++ b/ovinos/templates/ovinos/home.html
@@ -52,7 +52,9 @@
             <div class="card shadow text-center p-4">
                 <h4>💰 Página de Leilão</h4>
                 <p>Consulte os ovinos disponíveis e suas características antes e durante os leilões.</p>
-                <a href="{% url 'leilao' %}" class="btn btn-success w-100">Ir para o Leilão</a>
+                <a href="{% url 'leilao' %}" class="btn btn-warning btn-lg rounded-pill">
+    🐏 Ir para o Leilão
+</a>
             </div>
         </div>
 
