--- a/ovinos/templates/ovinos/login.html
+++ b/ovinos/templates/ovinos/login.html
@@ -31,7 +31,7 @@
                 </form>
                 <p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
 
-                <a href="{% url 'lista_ovinos' %}" class="btn btn-secondary w-100 mt-2">Página Inicial</a>
+                <a href="{% url 'home' %}" class="btn btn-secondary w-100 mt-2">Página Inicial</a>
             </div>
         </div>
     </div>
