--- a/ovinos/templates/ovinos/cadastrar_lote.html
+++ b/ovinos/templates/ovinos/cadastrar_lote.html
@@ -10,7 +10,7 @@
 <div class="container my-5">
     <div class="card shadow p-4 rounded-4">
         <h2 class="text-center mb-4">Cadastrar Novo Lote</h2>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="card shadow">
                 <!-- Coluna da imagem -->
@@ -33,7 +33,12 @@
               </div>
             <div class="mb-3">
                 <label class="form-label">Número do Lote</label>
-                {{ form.numero_lote }}
+                {{ form.numero_lote }}        
+                {% if form.numero_lote.errors %}
+                    <div class="text-danger small mt-1">
+                    {{ form.numero_lote.errors.0 }}
+                    </div>
+                {% endif %}
             </div>
             <div class="mb-3">
                 <label class="form-label">Descrição</label>
@@ -48,7 +53,7 @@
                 {{ form.data_leilao }}
             </div>
             <button type="submit" class="btn btn-success w-100 rounded-pill">Salvar Lote</button>
-            <a href="{% url 'leilao' %}" class="btn btn-secondary w-100 mt-2 rounded-pill">Voltar ao Leilão</a>
+            <a href="{% url 'leilao_view' %}" class="btn btn-secondary w-100 mt-2 rounded-pill">Voltar ao Leilão</a>
         </form>
     </div>
 </div>
