--- a/ovinos/templates/ovinos/lista_ovinos.html
+++ b/ovinos/templates/ovinos/lista_ovinos.html
@@ -39,6 +39,8 @@
         {% if user.is_authenticated %}
         <a href="{% url 'adicionar_ovino' %}" class="btn btn-success">Adicionar Ovino</a>
         {% endif %}
+
+        <a href="{% url 'home' %}" class="btn btn-warning btn-sm me-1">Página Inicial</a>
     </form>
 </div>
     <!-- Cards de ovinos -->
