--- a/ovinos/templates/ovinos/confirmar_remocao.html
+++ b/ovinos/templates/ovinos/confirmar_remocao.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Remover Ovino</title>
+    <title>Remover Animal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container mt-5" style="max-width: 500px;">
-    <h2>Remover Ovino</h2>
-    <p>Tem certeza que deseja remover o ovino <strong>{{ ovino.numero_brinco }} - {{ ovino.raca }}</strong>?</p>
+    <h2>Remover Animal</h2>
+    <p>Tem certeza que deseja remover o Animal <strong>{{ ovino.numero_brinco }} - {{ ovino.raca }}</strong>?</p>
 
     <form method="post">
         {% csrf_token %}
