--- a/ovinos/templates/ovinos/adicionar_ovino.html
+++ b/ovinos/templates/ovinos/adicionar_ovino.html
@@ -34,7 +34,7 @@
 <body>
 
 <header>
-    <h2>🐑 EAJ PecuáriaTech</h2>
+    <h2>🐑 AuctionEAJ</h2>
 
     <div>
         {% if user.is_authenticated %}
