--- a/ovinos/templates/ovinos/detalhes_ovino.html
+++ b/ovinos/templates/ovinos/detalhes_ovino.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Detalhes do Ovino</title>
+    <title>Detalhes do animal</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container my-5">
-    <h1 class="mb-4">Detalhes do Ovino</h1>
+    <h1 class="mb-4">Detalhes do animal</h1>
 
     <div class="card mx-auto" style="max-width: 400px;">
         {% if ovino.foto %}
