--- a/ovinos/templates/ovinos/lista_ovinos.html
+++ b/ovinos/templates/ovinos/lista_ovinos.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>EAJ PecuáriaTech</title>
+    <title>AuctionEAJ</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -34,7 +34,7 @@
 
 <!-- Header padrão -->
 <header>
-    <h2>🐑 EAJ PecuáriaTech</h2>
+    <h2>🐑 AuctionEAJ</h2>
 
     <div>
         {% if user.is_authenticated %}
