--- a/ovinos/templates/ovinos/login.html
+++ b/ovinos/templates/ovinos/login.html
@@ -30,6 +30,7 @@
                     <button type="submit" class="btn btn-primary w-100">Entrar</button>
                 </form>
                 <p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
+                <a href="{% url 'register' %}" class="btn btn-success w-100">Cadastre-se</a>
 
                 <a href="{% url 'home' %}" class="btn btn-secondary w-100 mt-2">Página Inicial</a>
             </div>
